Fix in GTK-server macros. Improvement in demo script.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1770,6 +1770,7 @@ FUNCTION_NAME = memset, NONE, NONE, 3, POINTER, INT, INT
 FUNCTION_NAME = sscanf, NONE, INT, 3, POINTER, STRING, PTR_INT
 FUNCTION_NAME = strtok, NONE, STRING, 2, STRING, STRING
 FUNCTION_NAME = strsep, NONE, STRING, 2, LONG, STRING
+FUNCTION_NAME = strlen, NONE, INT, 1, STRING
 FUNCTION_NAME = abs, NONE, INT, 1, INT
 FUNCTION_NAME = div, NONE, INT, 2, INT, INT
 FUNCTION_NAME = fmod, NONE, DOUBLE, 2, DOUBLE, DOUBLE
@@ -3518,9 +3519,15 @@ MACRO u_list_text
 
 $list GET $1
 $iter : gtk_server_opaque
+
+$str : strlen $2
+$str EMPTY 4
+
 gtk_list_store_append $list $iter
 gtk_list_store_set $list $iter 0 $2 -1
+JUMP 2
 
+gtk_list_store_clear $list
 g_free $iter
 
 ENDMACRO
@@ -3675,7 +3682,8 @@ MACRO u_list_get
 
 $list GET $1
 $tree GET $list
-$sel GET $tree
+$cell GET $tree
+$sel GET $cell
 
 $iter : gtk_server_opaque
 
@@ -3736,7 +3744,8 @@ MACRO u_list_set
 
 $list GET $1
 $tree GET $list
-$sel GET $tree
+$cell GET $tree
+$sel GET $cell
 
 $path : gtk_tree_path_new_from_string $2
 gtk_tree_selection_select_path $sel $path
