Added demo program for GTK3.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -2299,6 +2299,7 @@ MACRO u_label
 $label : gtk_label_new $1
 gtk_widget_set_size_request $label $2 $3
 gtk_widget_set_name $label $label
+gtk_label_set_line_wrap $label 1
 gtk_widget_show $label
 
 $4 EMPTY 3
