Finalized HUG demonstration program.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -387,6 +387,8 @@ FUNCTION_NAME = gtk_label_set_justify, NONE, NONE, 2, WIDGET, INT
 FUNCTION_NAME = gtk_label_get_width_chars, NONE, INT, 1, WIDGET
 FUNCTION_NAME = gtk_label_get_max_width_chars, NONE, INT, 1, WIDGET
 FUNCTION_NAME = gtk_label_set_markup_with_mnemonic, NONE, NONE, 2, WIDGET, STRING
+FUNCTION_NAME = gtk_label_set_ellipsize, NONE, NONE, 2, WIDGET, INT
+FUNCTION_NAME = gtk_label_set_max_width_chars, NONE, NONE, 2, WIDGET, INT
 #
 # GTK_FRAME
 #
@@ -1151,6 +1153,10 @@ ENUM_NAME = G_TYPE_RESERVED_USER_FIRST,196
 # PANGO
 #
 ENUM_NAME = PANGO_SCALE, 1024
+ENUM_NAME = PANGO_ELLIPSIZE_NONE, 0
+ENUM_NAME = PANGO_ELLIPSIZE_START, 1
+ENUM_NAME = PANGO_ELLIPSIZE_MIDDLE, 2
+ENUM_NAME = PANGO_ELLIPSIZE_END, 3
 #
 # Cairo stuff
 #
@@ -2299,13 +2305,13 @@ MACRO u_label
 $label : gtk_label_new $1
 gtk_widget_set_size_request $label $2 $3
 gtk_widget_set_name $label $label
-gtk_label_set_line_wrap $label 1
+gtk_label_set_ellipsize $label PANGO_ELLIPSIZE_END
 gtk_widget_show $label
 
-$4 EMPTY 3
-$5 EMPTY 2
-
 gtk_misc_set_alignment $label $4 $5
+
+$6 EMPTY 2
+gtk_label_set_max_width_chars $label $6
 
 RETURN $label
 
