Enable sequence number for library by default.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -122,7 +122,7 @@
 #
 # Opening library files up to a maximum sequence number.
 #
-# SEQUENCE = 100
+SEQUENCE = 100
 #
 #---------------------------------------------------------------------------
 #
